Reverted last change--it looks horrible on IE, not sure why. Fixed religions example to work on IE.
git-svn-id: http://simile-widgets.googlecode.com/svn/timeline/trunk@43 579c892a-5248-0410-a714-2bcf037eb5bf

--- a/src/main/webapp/api/styles/ethers.css
+++ b/src/main/webapp/api/styles/ethers.css
@@ -3,6 +3,7 @@
     height:         1.5em; 
     border-left:    1px solid #aaa; 
     padding-left:   2px; 
+    color:          #aaa;
 }
 
 .timeline-ether-marker-bottom-emphasized {
@@ -10,6 +11,7 @@
     height:         2em; 
     border-left:    1px solid #aaa; 
     padding-left:   2px; 
+    color:          black;
 }
 
 .timeline-ether-marker-top {
@@ -17,6 +19,7 @@
     height:         1.5em; 
     border-left:    1px solid #aaa; 
     padding-left:   2px; 
+    color:          #aaa;
 }
 
 .timeline-ether-marker-top-emphasized {
@@ -24,6 +27,7 @@
     height:         2em; 
     border-left:    1px solid #aaa; 
     padding-left:   2px; 
+    color:          black;
 }
 
 
@@ -32,6 +36,7 @@
     height:         1.5em; 
     border-top:     1px solid #aaa; 
     padding-top:    2px; 
+    color:          #aaa;
 }
 
 .timeline-ether-marker-right-emphasized {
@@ -39,12 +44,14 @@
     height:         1.5em; 
     border-top:     1px solid #aaa; 
     padding-top:    2px; 
+    color:          black;
 }
 .timeline-ether-marker-left {
     width:          5em; 
     height:         1.5em; 
     border-top:     1px solid #aaa; 
     padding-top:    2px; 
+    color:          #aaa;
 }
 
 .timeline-ether-marker-left-emphasized {
@@ -52,4 +59,5 @@
     height:         1.5em; 
     border-top:     1px solid #aaa; 
     padding-top:    2px; 
+    color:          black;
 }
